<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_insecure_data_storage_i"
        android:layout_width="353dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="goToInsecureDataStorageI"
        android:text="@string/btn_insecure_data_storage_i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_insecure_data_storage_ii"
        android:layout_width="358dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="goToInsecureDataStorageII"
        android:text="@string/btn_insecure_data_storage_ii"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_insecure_data_storage_i" />

    <Button
        android:id="@+id/button_insecure_data_storage_iii"
        android:layout_width="356dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="goToInsecureDataStorageIII"
        android:text="@string/btn_insecure_data_storage_iii"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_insecure_data_storage_ii" />

    <Button
        android:id="@+id/button_insecure_data_storage_iv"
        android:layout_width="358dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="goToInsecureDataStorageIV"
        android:text="@string/btn_insecure_data_storage_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_insecure_data_storage_iii" />

    <Button
        android:id="@+id/btn_input_validation_issues_i"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="goToInputValidationIssuesI"
        android:text="@string/btn_input_validation_issues_i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_insecure_data_storage_iv" />

    <Button
        android:id="@+id/btn_input_validation_issues_ii"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="goToInputValidationIssuesII"
        android:text="@string/btn_input_validation_issues_ii"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_input_validation_issues_i" />

</androidx.constraintlayout.widget.ConstraintLayout>